--- a/samples/RandomBitmapDisplay/RandomBitmapDisplay.vcxproj
+++ b/samples/RandomBitmapDisplay/RandomBitmapDisplay.vcxproj
@@ -157,7 +157,7 @@
     <Image Include="small.ico" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\StreamBitmapRenderer\StreamBitmapRenderer.vcxproj">
+    <ProjectReference Include="..\..\StreamBitmapRenderer\StreamBitmapRenderer.vcxproj">
       <Project>{cee14399-7352-4dcf-976c-aac03df563f7}</Project>
     </ProjectReference>
   </ItemGroup>
