--- a/samples/RandomBitmapDisplay/RandomBitmapDisplay.vcxproj
+++ b/samples/RandomBitmapDisplay/RandomBitmapDisplay.vcxproj
@@ -139,6 +139,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>Shcore.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
